--- a/test/vue/index.html
+++ b/test/vue/index.html
@@ -37,7 +37,7 @@
             </div>  
         </template>
     </div>
-    <script src="http://cdn.bootcss.com/vue/2.0.0/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.0.0/vue.min.js"></script>
     <script src="../../lib/LandmineSweep.js"></script>
     <script src="./index.js"></script>
 </body>
