--- a/test/jquery/index.html
+++ b/test/jquery/index.html
@@ -20,7 +20,7 @@
             </footer>
         </div>
     </div>
-    <script src="http://cdn.bootcss.com/jquery/2.1.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/2.1.0/jquery.min.js"></script>
     <script src="../../lib/LandmineSweep.js"></script>
     <script src="./index.js"></script>
 </body>
